// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<span
  className="sc-LoTwT hOvXqz"
>
  Caption
</span>
`;

exports[`Caption renders colors 1`] = `
Array [
  <span
    className="sc-LoTwT hOvXqz"
  >
    Default color is Bulma
  </span>,
  <span
    className="sc-LoTwT UWxDy"
    color="piccolo.100"
  >
    Piccolo
  </span>,
  <span
    className="sc-LoTwT bYQvno"
    color="trunks.100"
  >
    Trunks
  </span>,
  <span
    className="sc-LoTwT hJtBvC"
    color="krillin.100"
  >
    Krillin
  </span>,
]
`;

exports[`Caption renders font weights 1`] = `
Array [
  <span
    className="sc-LoTwT hOvXqz"
  >
    Default font-weight is bold
  </span>,
  <span
    className="sc-LoTwT eCQvbe"
  >
    Font-weight is regular
  </span>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <span
    className="sc-LoTwT hOvXqz"
  >
    Span is a default tag
  </span>,
  <p
    className="sc-LoTwT hOvXqz"
  >
    Paragraph tag
  </p>,
  <label
    className="sc-LoTwT hOvXqz"
  >
    Label tag
  </label>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <span
    className="sc-LoTwT hOvXqz"
  >
    Default font-size is 10px
  </span>,
  <span
    className="sc-LoTwT kYVCgq"
    size={9}
  >
    Size is 9px
  </span>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <span
    className="sc-LoTwT hOvXqz"
  >
    Text-align is not specified
  </span>,
  <span
    className="sc-LoTwT eyEzqU"
  >
    Centered text
  </span>,
  <span
    className="sc-LoTwT fTfWVj"
  >
    Right alignment
  </span>,
]
`;
